@@ -1,3 +1,8 @@
+2000-10-21  Geoffrey Keating  <geoffk@cygnus.com>
+
+	* sysdeps/unix/sysv/linux/powerpc/mmap64.c: Define PAGE_SHIFT
+	explicitly rather than getting it from <asm/page.h>.
+
 2000-10-24  Ulrich Drepper  <drepper@redhat.com>
 
 	* elf/dl-close.c (_dl_close): Handle relocation dependencies of
